--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,7 @@ telemator_export/local_db_settings.py
 /ansible/.imported_roles
 local_settings.py
 .vscode/
+/navtelemator/scripts/errors.txt
+/navtelemator/scripts/in_telemator.txt
+/navtelemator/scripts/needs_to_be_updated.txt
+/navtelemator/scripts/not_in_telemator.txt
